make onBoardingScreen and handel language

--- a/lib/config/language/l10n/app_ar.arb
+++ b/lib/config/language/l10n/app_ar.arb
@@ -23,5 +23,19 @@
   "phone_required": "رقم الهاتف مطلوب",
   "phone_invalid": "يجب أن يحتوي رقم الهاتف على 11 رقمًا",
   "confirm_password_required": "تأكيد كلمة المرور مطلوب",
-  "passwords_not_match": "كلمتا المرور غير متطابقتين"
+  "passwords_not_match": "كلمتا المرور غير متطابقتين",
+  "find_next_favorite_movie": "اعثر على فيلمك المفضل التالي هنا",
+  "movie_library_description": "احصل على وصول إلى مكتبة ضخمة من الأفلام لتناسب جميع الأذواق. بالتأكيد ستعجبك.",
+  "explore_now": "استكشف الآن",
+  "next": "التالي",
+  "back": "السابق",
+  "poster1_title": "اكتشف الأفلام",
+  "poster1_description": "استكشف مجموعة واسعة من الأفلام بجميع أنواعها وجودتها. ابحث عن فيلمك المفضل بسهولة.",
+  "poster2_title": "استكشف جميع الأنواع",
+  "poster2_description": "اكتشف أفلامًا من جميع الأنواع، بجميع الجودة المتاحة. شاهد شيئًا جديدًا ومثيرًا كل يوم.",
+  "poster3_title": "إنشاء قوائم المراقبة",
+  "poster3_description": "احفظ الأفلام في قائمة المشاهدة لمتابعة ما ترغب بمشاهدته لاحقًا. استمتع بأفلام متنوعة الجودة والأنواع.",
+  "poster4_title": "قم بالتقييم والمراجعة والتعلم",
+  "poster4_description": "شاركنا رأيك في الأفلام التي شاهدتها. تعمق في تفاصيل الفيلم، وساعد الآخرين على اكتشاف أفلام رائعة من خلال مراجعاتك.",
+  "poster5_title": "ابدأ المشاهدة الآن"
 }
