--- a/lib/config/language/l10n/app_en.arb
+++ b/lib/config/language/l10n/app_en.arb
@@ -23,5 +23,19 @@
   "phone_required": "Phone is required",
   "phone_invalid": "Phone must be at 11 numbers",
   "confirm_password_required": "Confirm password is required",
-  "passwords_not_match": "Passwords do not match"
+  "passwords_not_match": "Passwords do not match",
+  "find_next_favorite_movie": "Find Your Next Favorite Movie Here",
+  "movie_library_description": "Get access to a huge library of movies to suit all tastes. You will surely like it.",
+  "explore_now": "Explore Now",
+  "next": "Next",
+  "back": "Back",
+  "poster1_title": "Discover Movies",
+  "poster1_description": "Explore a vast collection of movies in all qualities and genres. Find your next favorite film with ease.",
+  "poster2_title": "Explore All Genres",
+  "poster2_description": "Discover movies from every genre, in all available qualities. Find something new and exciting to watch every day.",
+  "poster3_title": "Create Watch Lists",
+  "poster3_description": "Save movies to your watchlist to keep track of what you want to watch next. Enjoy films in various qualities and genres.",
+  "poster4_title": "Rate, Review, and Learn",
+  "poster4_description": "Share your thoughts on the movies you've watched. Dive deep into film details and help others discover great movies with your reviews.",
+  "poster5_title": "Start Watching Now"
 }
