handel Logic view

--- a/lib/config/language/l10n/app_ar.arb
+++ b/lib/config/language/l10n/app_ar.arb
@@ -37,5 +37,8 @@
   "poster3_description": "احفظ الأفلام في قائمة المشاهدة لمتابعة ما ترغب بمشاهدته لاحقًا. استمتع بأفلام متنوعة الجودة والأنواع.",
   "poster4_title": "قم بالتقييم والمراجعة والتعلم",
   "poster4_description": "شاركنا رأيك في الأفلام التي شاهدتها. تعمق في تفاصيل الفيلم، وساعد الآخرين على اكتشاف أفلام رائعة من خلال مراجعاتك.",
-  "poster5_title": "ابدأ المشاهدة الآن"
+  "poster5_title": "ابدأ المشاهدة الآن",
+  "error": "خطأ",
+  "ok": "حسنا"
+
 }
