make register logic and check user login in or not make the main Views [ HomeView , SearchView , BrowseView , ProfileView ]

--- a/lib/config/language/l10n/app_ar.arb
+++ b/lib/config/language/l10n/app_ar.arb
@@ -39,6 +39,8 @@
   "poster4_description": "شاركنا رأيك في الأفلام التي شاهدتها. تعمق في تفاصيل الفيلم، وساعد الآخرين على اكتشاف أفلام رائعة من خلال مراجعاتك.",
   "poster5_title": "ابدأ المشاهدة الآن",
   "error": "خطأ",
-  "ok": "حسنا"
-
+  "ok": "حسنا",
+  "register_successfully": "تم إنشاء الحساب بنجاح",
+  "login_successfully": "تم التسجيل بنجاح",
+  "go": "اذهب"
 }
