handel forgetPassword ui & logic , handel email verification

--- a/lib/config/language/l10n/app_en.arb
+++ b/lib/config/language/l10n/app_en.arb
@@ -48,5 +48,6 @@
   "exit": "Exit",
   "history": "History",
   "wish_list": "Wish List",
-  "edit_profile": "Edit Profile"
+  "edit_profile": "Edit Profile",
+  "sent_mail": "Sent Mail"
 }
