--- a/lib/config/language/l10n/app_ar.arb
+++ b/lib/config/language/l10n/app_ar.arb
@@ -48,5 +48,6 @@
   "exit": "خروج",
   "history": "السجل",
   "wish_list": "قائمة الرغبات",
-  "edit_profile": "تعديل الملف الشخصي"
+  "edit_profile": "تعديل الملف الشخصي",
+  "sent_mail": "تم إرسال البريد"
 }
