--- a/lib/config/language/l10n/app_ar.arb
+++ b/lib/config/language/l10n/app_ar.arb
@@ -49,5 +49,11 @@
   "history": "السجل",
   "wish_list": "قائمة الرغبات",
   "edit_profile": "تعديل الملف الشخصي",
-  "sent_mail": "تم إرسال البريد"
+  "sent_mail": "تم إرسال البريد",
+  "action": "أكشن",
+  "comedy": "كوميديا",
+  "horror": "رعب",
+  "see_more": "أرني المزيد"
+
+
 }
