handel Movie details ui & logic

--- a/lib/config/language/l10n/app_en.arb
+++ b/lib/config/language/l10n/app_en.arb
@@ -53,6 +53,13 @@
   "action": "Action",
   "comedy": "Comedy",
   "horror": "Horror",
-  "see_more": "See More"
-
+  "see_more": "See More",
+  "watch": "Watch",
+  "screen_shots": "Screen Shots",
+  "pass_reg_ex": "Password must contain an uppercase letter, a number, and a special character",
+  "similar": "Similar",
+  "summary": "Summary",
+  "cast": "Cast",
+  "genres": "Genres",
+  "search": "Search"
 }
