--- a/lib/config/language/l10n/app_ar.arb
+++ b/lib/config/language/l10n/app_ar.arb
@@ -29,6 +29,7 @@
   "explore_now": "استكشف الآن",
   "next": "التالي",
   "back": "السابق",
+  "watch": "مشاهدة",
   "poster1_title": "اكتشف الأفلام",
   "poster1_description": "استكشف مجموعة واسعة من الأفلام بجميع أنواعها وجودتها. ابحث عن فيلمك المفضل بسهولة.",
   "poster2_title": "استكشف جميع الأنواع",
@@ -53,7 +54,12 @@
   "action": "أكشن",
   "comedy": "كوميديا",
   "horror": "رعب",
-  "see_more": "أرني المزيد"
-
-
+  "see_more": "أرني المزيد",
+  "pass_reg_ex": "كلمة المرور يجب أن تحتوي على حرف كبير، رقم، ورمز خاص",
+  "screen_shots": "لقطات الشاشة",
+  "similar": "مشابه",
+  "summary": "الملخص",
+  "cast": "طاقم العمل",
+  "genres": "الأنواع",
+  "search": "بحث"
 }
