handel Delete Account in profile

--- a/lib/config/language/l10n/app_en.arb
+++ b/lib/config/language/l10n/app_en.arb
@@ -61,5 +61,9 @@
   "summary": "Summary",
   "cast": "Cast",
   "genres": "Genres",
-  "search": "Search"
+  "search": "Search",
+  "pick_avatar": "Pick Avatar",
+  "delete_account": "Delete Account",
+  "update_data": "Update Data",
+  "reset_password": "Reset Password"
 }
