--- a/lib/config/language/l10n/app_ar.arb
+++ b/lib/config/language/l10n/app_ar.arb
@@ -61,5 +61,9 @@
   "summary": "الملخص",
   "cast": "طاقم العمل",
   "genres": "الأنواع",
-  "search": "بحث"
+  "search": "بحث",
+  "pick_avatar": "اختر الصورة الرمزية",
+  "delete_account": "حذف الحساب",
+  "update_data": "تحديث البيانات",
+  "reset_password": "إعادة تعيين كلمة المرور"
 }
