--- a/lib/config/language/l10n/app_en.arb
+++ b/lib/config/language/l10n/app_en.arb
@@ -65,5 +65,7 @@
   "pick_avatar": "Pick Avatar",
   "delete_account": "Delete Account",
   "update_data": "Update Data",
-  "reset_password": "Reset Password"
+  "reset_password": "Reset Password",
+  "added_to_list": "Added to the list",
+  "removed_from_list": "Removed from the list"
 }
